--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fs-pet-store",
   "version": "0.1.0",
+  "type": "module",
   "description": "A small server app to demonstrate CRUD over an HTTP API",
   "main": "restfulExpressServer.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon ./js/restfulExpressServer.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,10 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^1.19.4"
+    "express-basic-auth": "^1.2.1",
+    "nodemon": "^1.19.4",
+    "pg": "^8.10.0"
   }
 }
